--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,28 @@ a{
   text-decoration: none;
 }
 
+
+/********************** HOME PAGE ********************/
+
+#background{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sun{
+  width: 120vw;
+  aspect-ratio: 1/1;
+  background: url(assets/noise-light.png), radial-gradient(circle, #015ba0, #006CBC);
+  border-radius: 50%;
+  box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, 0%);  
+  z-index: -1;
+}
+
 #navbar{
   font-size: var(--par);
   display: flex;
@@ -63,37 +85,6 @@ a{
   align-items: center;
   /* height: 700px;  */
   aspect-ratio: 1/0.5;
-}
-
-#about{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  aspect-ratio: 1/0.75;
-  text-align: center;
-  margin: 5vw;
-  gap: 5vw;
-}
-
-#footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  aspect-ratio: 1/0.0625;
-  margin: 0vw 2vw 0vw 2vw;
-}
-
-.sun{
-  width: 120vw;
-  aspect-ratio: 1/1;
-  background: url(assets/noise-light.png), radial-gradient(circle, #015ba0, #006CBC);
-  border-radius: 50%;
-  box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, 0%);  
-  z-index: -1;
 }
 
 .project-responsive{
@@ -139,8 +130,71 @@ a{
   to {transform: rotate(360deg);}
 }
 
+#about{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/0.75;
+  text-align: center;
+  margin: 5vw;
+  gap: 5vw;
+}
+
 .about-responsive{
   width: 30vw;
   aspect-ratio: 1/1.4;
   object-fit: cover;
 }
+
+#footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  aspect-ratio: 1/0.0625;
+  margin: 0vw 2vw 0vw 2vw;
+}
+
+
+
+/*************** PROJECTS PAGE *******************/
+
+.projectSun{
+  width: 30vw;
+  aspect-ratio: 1/1;
+  background: url(assets/noise-light.png), radial-gradient(circle, #015ba0, #006CBC);
+  border-radius: 50%;
+  box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
+  position: absolute;
+  /* left: 50vw; */
+  top: 100px;
+  z-index: -2;
+}
+
+/*trapezoid clip path*/
+/* clip-path: polygon(80% 20%, 65% 20%, 60% 25%, 40% 25%, 35% 20%, 20% 20%, 0% 100%, 100% 100%); */
+/*upside down trap*/
+/* clip-path: polygon(80% 20%, 65% 20%, 60% 25%, 40% 25%, 35% 20%, 20% 20%, 0% 0%, 100% 0%); */
+
+.windowGlass{
+  background-color: rgba(0, 0, 0, 0.1);
+  min-width: 80vw;
+  aspect-ratio: 1/0.55;
+  position: absolute;
+  box-shadow: inset 5px 5px 20px 0px rgba(0, 108, 188, 1);
+  border-radius: 100px;
+  /* left: 10%; */
+  top: 100px;
+}
+
+.windowPane{
+  min-width: 80vw;
+  aspect-ratio: 1/0.55;
+  position: absolute;
+  /* outline: 10px solid #717E82; */
+  box-shadow: inset 0 0 2px 10px #717E82;
+  border-radius: 100px;
+  /* left: center; */
+  top: 100px;
+}
+
+
