--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@
 body{
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-family: Urban;
-  background-color: #0b1a36;
+  /* background-color: #0b1a36; */
+  background: #020403;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 h1{
@@ -166,7 +167,7 @@ a{
   box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
   position: absolute;
   /* left: 50vw; */
-  top: 100px;
+  /* top: 100px; */
   z-index: -2;
 }
 
@@ -176,25 +177,27 @@ a{
 /* clip-path: polygon(80% 20%, 65% 20%, 60% 25%, 40% 25%, 35% 20%, 20% 20%, 0% 0%, 100% 0%); */
 
 .windowGlass{
-  background-color: rgba(0, 0, 0, 0.1);
-  min-width: 80vw;
-  aspect-ratio: 1/0.55;
+  background-color: transparent;
+  min-width: 100vw;
+  height: 100vmin;
   position: absolute;
   box-shadow: inset 5px 5px 20px 0px rgba(0, 108, 188, 1);
-  border-radius: 100px;
+  border-radius: 200px;
   /* left: 10%; */
-  top: 100px;
+  top: 20px;
 }
 
 .windowPane{
-  min-width: 80vw;
-  aspect-ratio: 1/0.55;
+  width: 100vw;
+  height: 100vmin;
   position: absolute;
   /* outline: 10px solid #717E82; */
-  box-shadow: inset 0 0 2px 10px #717E82;
-  border-radius: 100px;
+  box-shadow: 0 0 2px 10px white,
+  0 0 50px 100px #717E82,
+  0 0 1px 300px black;
+  border-radius: 250px;
   /* left: center; */
-  top: 100px;
+  top: 20px;
 }
 
 
