--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   --t2: clamp(2.5rem, calc(6vw + 1rem), 3.5rem);
   --t3: clamp(1rem, calc(3vw + 1rem), 2.8rem);
   --par: clamp(0.25rem, calc(1vw + 1rem), 1.5rem);
+  --mask-width: clamp(10rem, calc(100vw + 1rem), 200rem);
 }
 
 body{
@@ -166,8 +167,6 @@ a{
   border-radius: 50%;
   box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
   position: absolute;
-  /* left: 50vw; */
-  /* top: 100px; */
   z-index: -2;
 }
 
@@ -178,26 +177,26 @@ a{
 
 .windowGlass{
   background-color: transparent;
-  min-width: 100vw;
-  height: 100vmin;
+  width: var(--mask-width);
+  height: 105dvh;
   position: absolute;
   box-shadow: inset 5px 5px 20px 0px rgba(0, 108, 188, 1);
-  border-radius: 200px;
+  border-radius: 250px;
   /* left: 10%; */
-  top: 20px;
+  top: -3dvh;
 }
 
 .windowPane{
-  width: 100vw;
-  height: 100vmin;
+  width: var(--mask-width);
+  height: 105dvh;
   position: absolute;
   /* outline: 10px solid #717E82; */
-  box-shadow: 0 0 2px 10px white,
+  box-shadow: 0 0 5px 10px white,
   0 0 50px 100px #717E82,
   0 0 1px 300px black;
   border-radius: 250px;
   /* left: center; */
-  top: 20px;
+  top: -3dvh;
 }
 
 
