--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,38 @@
 
 :root {
-  --t1: clamp(4rem, calc(10vw + 1rem), 7rem);
-  --t2: clamp(2.5rem, calc(6vw + 1rem), 3.5rem);
-  --t3: clamp(1rem, calc(3vw + 1rem), 2.8rem);
-  --par: clamp(0.25rem, calc(1vw + 1rem), 1.5rem);
-  --mask-width: clamp(10rem, calc(100vw + 1rem), 200rem);
+  --t1: clamp(3rem, calc(7vw + 1rem), 6rem);
+  --t2: clamp(2rem, calc(4vw + 1rem), 3rem);
+  --t3: clamp(1.25rem, calc(2vw + 1rem), 2rem);
+  --par: clamp(1rem, calc(1vw + 1rem), 1.25rem);
 }
 
 body{
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-family: Urban;
   /* background-color: #0b1a36; */
-  background: #020403;
+  background: #050E14;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
 
 h1{
+  margin: 0;
   font-size: var(--t1);
   color: rgb(240, 245, 243);
 }
 h2{
+  margin: 0;
   font-size: var(--t2);
   color: rgb(240, 245, 243);
 }
 h3{
+  margin: 0;
   font-size: var(--t3);
   color: rgb(240, 245, 243);
 }
-h4{
-  font-size: var(--par);
-  color: rgb(240, 245, 243);
-}
 p{
+  margin: 0;
   font-size: var(--par);
   color: rgb(240, 245, 243);
 }
@@ -45,13 +44,7 @@ a{
 
 /********************** HOME PAGE ********************/
 
-#background{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.sun{
+/* .sun{
   width: 120vw;
   aspect-ratio: 1/1;
   background: url(assets/noise-light.png), radial-gradient(circle, #015ba0, #006CBC);
@@ -62,48 +55,59 @@ a{
   top: 50%;
   transform: translate(-50%, 0%);  
   z-index: -1;
-}
+} */
 
 #navbar{
-  font-size: var(--par);
   display: flex;
   justify-content: center;
   align-items: center;
-  aspect-ratio: 1/0.0625;
-  /* height: 70px; */
+  width: 100%;
+  min-height: 7vh;
+  background-color: #0F2739;
   gap: 2vw;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 #hero{
-  aspect-ratio: 1/0.5;
-  text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  padding: 70px 10% 0;
+  position: relative;
+}
+
+.hero-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 5vw;
+  max-width: 80vw;
+  margin-top: 5vh;
 }
 
 #projects{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* height: 700px;  */
-  aspect-ratio: 1/0.5;
+  width: 100%;
+  height: 100vh;
 }
 
 .project-image{
-  width: 28vw;
-  align-content: center;
-  aspect-ratio: 1/1.55;
-  border-radius: 23px;
+  width: 23vw;
+  aspect-ratio: 1/1.3;
+  border-radius: 30px;
   object-fit: cover;
   position: relative;
+  translate: 0px 3px;
   z-index: 1;
 }
 
 .project-card{
-  width: 30vw;
+  width: 25vw;
   background: #07182E;
-  aspect-ratio: 1/1.5;
+  aspect-ratio: 1/1.25;
   display: flex;
   justify-content: center;
   align-items: center;
